--- a/ecomsite/perfumeshop/templates/perfumeshop/index.html
+++ b/ecomsite/perfumeshop/templates/perfumeshop/index.html
@@ -53,26 +53,47 @@
     </div>
 
     <div class="row">
-            <div class="col-md-3 offset-md-4">
-                <ul class="pagination">
-                    {% if perfumes.has_previous %}
-                        <li class="page-item">
-                            <a class="page-link" href="?page={{ perfumes.previous_page_number }}">Previous</a>
-                        </li>
-                    {% endif %}
+    <div class="col-md-3 offset-md-4">
+        <ul class="pagination">
+            {% if perfumes.has_previous %}
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ perfumes.previous_page_number }}">Previous</a>
+                </li>
+            {% endif %}
 
+            {% for num in perfumes.paginator.page_range %}
+                {% if perfumes.number == num %}
                     <li class="page-item active">
-                        <a class="page-link" href="?page={{ perfumes.number }}">Current</a>
+                        <a class="page-link" href="?page={{ num }}">{{ num }}</a>
                     </li>
-
-                    {% if perfumes.has_next %}
+                {% elif num > perfumes.number|add:'-3' and num < perfumes.number|add:'3' %}
                     <li class="page-item">
-                        <a class="page-link" href="?page={{ perfumes.next_page_number }}">Next</a>
+                        <a class="page-link" href="?page={{ num }}">{{ num }}</a>
                     </li>
-                    {% endif %}
-                </ul>
-            </div>
-        </div>
+                {% elif num == 1 or num == perfumes.paginator.num_pages %}
+                    <li class="page-item">
+                        <a class="page-link" href="?page={{ num }}">{{ num }}</a>
+                    </li>
+                {% elif num == perfumes.number|add:'-3' %}
+                    <li class="page-item">
+                        <span class="page-link">...</span>
+                    </li>
+                {% elif num == perfumes.number|add:'3' %}
+                    <li class="page-item">
+                        <span class="page-link">...</span>
+                    </li>
+                {% endif %}
+            {% endfor %}
+
+            {% if perfumes.has_next %}
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ perfumes.next_page_number }}">Next</a>
+                </li>
+            {% endif %}
+        </ul>
+    </div>
+</div>
+
 
     <script src="{% static 'perfumeshop/custom.js' %}"></script>
 
