--- a/ecomsite/perfumeshop/templates/perfumeshop/index.html
+++ b/ecomsite/perfumeshop/templates/perfumeshop/index.html
@@ -9,20 +9,20 @@
     <!-- Bootstrap CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 
-    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<!--    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>-->
+<!--    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>-->
+<!--    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>-->
+<!--    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>-->
 
-   
 
-    
+
+
 </head>
 <body>
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <form class="card card-sm">
+                <form class="card card-sm" method="get">
                     <div class="card-body row no-gutters align-items-center">
                         <div class="col">
                             <input type="search" name="item_name" placeholder="Search for products" class="form-control form-control-borderless">
@@ -36,30 +36,16 @@
         </div>
 
         <div class="row">
-            <aside class="col-md-3 filter-section">
+             <aside class="col-md-3 filter-section">
                 <h5>Price range</h5>
-
-                 <div class="price-range">
-                    <input type="number" class="form-control mb-2" id="minPrice" name="min_price" placeholder="0 zł">
-                    <span class="mx-2"> - </span>
-                    <input type="number" class="form-control mb-2" id="maxPrice" name="max_price" placeholder="10 980 zł">
-                </div>
-
-                <!-- <h4>Marka</h4>
-                <input type="text" class="form-control mb-3" id="brandSearch" placeholder="Szukaj...">
-                <div class="form-check">
-                    <input type="checkbox" class="form-check-input" id="brandVersace">
-                    <label class="form-check-label" for="brandVersace">Versace</label>
-                </div>
-                <div class="form-check">
-                    <input type="checkbox" class="form-check-input" id="brandDior">
-                    <label class="form-check-label" for="brandDior">Dior</label>
-                </div>
-                <div class="form-check">
-                    <input type="checkbox" class="form-check-input" id="brandChanel">
-                    <label class="form-check-label" for="brandChanel">Chanel</label>
-                </div>
-                Add more brands as needed -->
+                <form method="get">
+                    <div class="price-range">
+                        <input type="number" class="form-control mb-2" id="minPrice" name="min_price" placeholder="0">
+                        <span class="mx-2"> - </span>
+                        <input type="number" class="form-control mb-2" id="maxPrice" name="max_price" placeholder="100">
+                    </div>
+                    <button class="btn btn-primary mt-2" type="submit">Filtruj</button>
+                </form>
             </aside>
 
             <main class="col-md-9" id="perfume-container">
