--- a/ecomsite/perfumeshop/templates/perfumeshop/index.html
+++ b/ecomsite/perfumeshop/templates/perfumeshop/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perfume Store</title>
     <link rel="stylesheet" href="{% static 'perfumeshop/style.css' %}">
-    <!-- Bootstrap CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -15,33 +14,29 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-     <style>
-         .main-card {
-             margin-top: 20px;
-         }
-         .product-card img {
+    <style>
+        .main-card {
+            margin-top: 20px;
+        }
+        .product-card img {
             margin-top: 10px;
             width: 100%;
             height: 250px;
             object-fit: contain;
         }
-
         .product-card {
             border: none !important;
         }
-
         .price-range {
             margin-top: 10px;
             display: flex;
             align-items: center;
         }
-
         .price-range input {
             margin-top: 10px;
             width: 80px;
             margin-right: 5px;
         }
-
         .price-range span {
             margin: 0 5px;
         }
@@ -50,17 +45,12 @@
             margin: 0 auto;
         }
     </style>
-
-
 </head>
 <body>
-    
-    <i class="fas fa-search"></i>
-
     <div class="container custom-container">
         <div class="row">
             <div class="col-md-12">
-                <form class="card card-sm" method="get">
+                <form class="card card-sm" method="get" id="search-form">
                     <div class="card-body row no-gutters align-items-center">
                         <div class="col">
                             <input type="search" name="item_name" placeholder="Search for products" class="form-control form-control-borderless">
@@ -74,21 +64,24 @@
         </div>
 
         <div class="row main-card">
-             <aside class="col-md-3 filter-section">
+            <aside class="col-md-3 filter-section">
                 <h5>Price range</h5>
-                <form method="get"  id="price-filter-form">
+                <form method="get" id="filter-form">
                     <div class="price-range">
-                        <input type="number" class="form-control mb-2" id="minPrice" name="min_price" placeholder="0">
+                        <input type="number" class="form-control mb-2" id="minPrice" name="min_price" placeholder="0" value="{{ request.GET.min_price }}">
                         <span class="mx-2"> - </span>
-                        <input type="number" class="form-control mb-2" id="maxPrice" name="max_price" placeholder="100">
-                        <!-- <button  type="submit">
-                            
-                        </button> -->
-                        
+                        <input type="number" class="form-control mb-2" id="maxPrice" name="max_price" placeholder="100" value="{{ request.GET.max_price }}">
+                        <button type="submit" class="btn btn-primary mt-3">Filter</button>
                     </div>
-
+                    <h5>Brands</h5>
+                    <div class="btn-group-vertical">
+                        {% for brand in all_brands %}
+                            <button type="submit" class="btn btn-link text-left" name="brands" value="{{ brand }}">{{ brand }}</button>
+                        {% endfor %}
+                    </div>
+                
+                    
                 </form>
-                <i class="fa-sharp fa-solid fa-magnifying-glass"></i>
             </aside>
 
             <main class="col-md-9" id="perfume-container">
@@ -154,10 +147,6 @@
     </div>
 
     <script src="{% static 'perfumeshop/custom.js' %}"></script>
-    <script>
-        
-    </script>
 
-    
 </body>
 </html>
