--- a/ecomsite/perfumeshop/templates/perfumeshop/detail.html
+++ b/ecomsite/perfumeshop/templates/perfumeshop/detail.html
@@ -45,7 +45,7 @@
 
             <div class="col-md-6">
                 <h1>{{ product_object.brand }} {{ product_object.name }}</h1>
-
+                <span class="perfume_type"> {{ product_object.type }}</span><br>
                 <span class="current-price h4">{{ product_object.price }}</span>
 
                 <div class="mt-3">
