--- a/ecomsite/perfumeshop/templates/perfumeshop/index.html
+++ b/ecomsite/perfumeshop/templates/perfumeshop/index.html
@@ -23,9 +23,9 @@
             height: 250px;
             object-fit: contain;
         }
-        .product-card {
-            border: none !important;
-        }
+        /*.product-card {*/
+        /*    border: none !important;*/
+        /*}*/
         .price-range {
             margin-top: 10px;
             display: flex;
@@ -42,6 +42,21 @@
         .custom-container {
             max-width: 1200px;
             margin: 0 auto;
+        }
+        .btn{
+            border-radius: 0px;
+            margin: 10px;
+        }
+        .btn_style{
+            padding: 10px;
+            align-items: center;
+            display: flex;
+            justify-content: center;
+        }
+        .pagination{
+            justify-content: center;
+            align-items: center;
+            display: flex;
         }
     </style>
 </head>
@@ -93,6 +108,11 @@
                                 <p class="product-type">{{ perfume.type }}</p>
                                 <p class="product-price">{{ perfume.price }} zł</p>
                             </div>
+                            <div class="btn_style">
+                                <a href="{{ perfume.id }}" class="btn btn-warning">View</a>
+                                <button id="{{ perfume.id }}" class="btn atc btn-warning">Add to cart</button>
+                            </div>
+                             
                         </div>
                     </div>
                     {% endfor %}
@@ -100,42 +120,40 @@
             </main>
         </div>
 
-        <div class="row">
+        <div class="row paginator">
             <div class="col-md-12">
-                 <ul class="pagination">
+                <ul class="pagination">
                     {% if perfumes.has_previous %}
                         <li class="page-item">
-                            <a class="page-link" href="?page={{ perfumes.previous_page_number }}">Previous</a>
+                            <a class="page-link" href="?page=1{% for key, value in request.GET.items %}{% if value and key != 'page' %}&{{ key }}={{ value }}{% endif %}{% endfor %}">&laquo; First</a>
+                        </li>
+                        <li class="page-item">
+                            <a class="page-link" href="?page={{ perfumes.previous_page_number }}{% for key, value in request.GET.items %}{% if value and key != 'page' %}&{{ key }}={{ value }}{% endif %}{% endfor %}">Previous</a>
                         </li>
                     {% endif %}
 
                     {% for num in perfumes.paginator.page_range %}
                         {% if perfumes.number == num %}
                             <li class="page-item active">
-                                <a class="page-link" href="?page={{ num }}">{{ num }}</a>
+                                <a class="page-link" href="#">{{ num }}</a>
                             </li>
-                        {% elif num > perfumes.number|add:'-3' and num < perfumes.number|add:'3' %}
+                        {% elif num <= 3 or num == perfumes.paginator.num_pages %}
                             <li class="page-item">
-                                <a class="page-link" href="?page={{ num }}">{{ num }}</a>
+                                <a class="page-link" href="?page={{ num }}{% for key, value in request.GET.items %}{% if value and key != 'page' %}&{{ key }}={{ value }}{% endif %}{% endfor %}">{{ num }}</a>
                             </li>
-                        {% elif num == 1 or num == perfumes.paginator.num_pages %}
+                        {% elif num == 4 %}
                             <li class="page-item">
-                                <a class="page-link" href="?page={{ num }}">{{ num }}</a>
-                            </li>
-                        {% elif num == perfumes.number|add:'-3' %}
-                            <li class="page-item">
-                                <span class="page-link">...</span>
-                            </li>
-                        {% elif num == perfumes.number|add:'3' %}
-                            <li class="page-item">
-                                <span class="page-link">...</span>
+                                <a class="page-link" href="#">...</a>
                             </li>
                         {% endif %}
                     {% endfor %}
 
                     {% if perfumes.has_next %}
                         <li class="page-item">
-                            <a class="page-link" href="?page={{ perfumes.next_page_number }}">Next</a>
+                            <a class="page-link" href="?page={{ perfumes.next_page_number }}{% for key, value in request.GET.items %}{% if value and key != 'page' %}&{{ key }}={{ value }}{% endif %}{% endfor %}">Next</a>
+                        </li>
+                        <li class="page-item">
+                            <a class="page-link" href="?page={{ perfumes.paginator.num_pages }}{% for key, value in request.GET.items %}{% if value and key != 'page' %}&{{ key }}={{ value }}{% endif %}{% endfor %}">Last &raquo;</a>
                         </li>
                     {% endif %}
                 </ul>
