--- a/ecomsite/perfumeshop/templates/perfumeshop/index.html
+++ b/ecomsite/perfumeshop/templates/perfumeshop/index.html
@@ -16,7 +16,6 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
 
-
     <style>
         .main-card {
             margin-top: 20px;
@@ -27,9 +26,6 @@
             height: 250px;
             object-fit: contain;
         }
-        /*.product-card {*/
-        /*    border: none !important;*/
-        /*}*/
         .price-range {
             margin-top: 10px;
             display: flex;
@@ -47,17 +43,17 @@
             max-width: 1200px;
             margin: 0 auto;
         }
-        .btn{
+        .btn {
             border-radius: 0px;
             margin: 10px;
         }
-        .btn_style{
+        .btn_style {
             padding: 10px;
             align-items: center;
             display: flex;
             justify-content: center;
         }
-        .pagination{
+        .pagination {
             justify-content: center;
             align-items: center;
             display: flex;
@@ -66,7 +62,6 @@
 </head>
 <body>
     <div class="container custom-container">
-
         <div class="row">
             <div class="col-md-12">
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -78,8 +73,7 @@
                       <div class="navbar-nav">
                         <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
                         <a class="nav-item nav-link" href="#">Features</a>
-                        <button id="cart" type="button" class="btn btn-secondary" data-container="body" data-toggle="popover" data-placement="bottom" data-content="Vivamus
-                        sagittis lacus vel augue laoreet rutrum faucibus.">
+                        <button id="cart" data-html="true" type="button" class="btn btn-secondary" data-container="body" data-toggle="popover" data-placement="bottom" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.">
                         Cart(0)
                         </button>
                         <a class="nav-item nav-link disabled" href="#">Disabled</a>
@@ -131,7 +125,7 @@
                             <img src="{{ perfume.image }}" class="card-img-top" alt="{{ perfume.name }}">
                             <div class="card-body">
                                 <h4 class="card-title">{{ perfume.brand }}</h4>
-                                <h5 class="product-name">{{ perfume.name }}</h5>
+                                <h5 id="nm{{ perfume.id }}" class="product-name">{{ perfume.name }}</h5>
                                 <p class="product-type">{{ perfume.type }}</p>
                                 <p class="product-price">{{ perfume.price }} zł</p>
                             </div>
@@ -139,7 +133,6 @@
                                 <a href="{{ perfume.id }}" class="btn btn-warning">View</a>
                                 <button id="{{ perfume.id }}" class="btn atc btn-warning">Add to cart</button>
                             </div>
-                             
                         </div>
                     </div>
                     {% endfor %}
@@ -188,6 +181,76 @@
         </div>
     </div>
 
-    <script src="{% static 'perfumeshop/custom.js' %}"></script>
+<!--     <script src="{% static 'perfumeshop/custom.js' %}"></script>-->
+
+    <script>
+            $(document).ready(function() {
+        var cards = $('#perfume-container .row .card');
+        var maxHeight = Math.max.apply(null, cards.map(function () {
+            return $(this).height();
+        }).get());
+        cards.height(maxHeight);
+
+        if (localStorage.getItem('cart') == null) {
+            var cart = {};
+            console.log('ERROR');
+        } else {
+            var cart = JSON.parse(localStorage.getItem('cart'));
+            DisplayCart(cart);
+        }
+
+        $(document).on('click', '.atc', function() {
+            var item_id = this.id.toString();
+            console.log(item_id);
+
+            if (cart[item_id] != undefined) {
+                cart[item_id] += 1;
+            } else {
+                cart[item_id] = 1;
+            }
+            console.log(cart);
+            localStorage.setItem('cart', JSON.stringify(cart));
+            document.getElementById('cart').innerHTML = "Cart(" + Object.keys(cart).length + ")";
+            DisplayCart(cart);
+        });
+
+        $('[data-toggle="popover"]').popover();
+    });
+
+    function DisplayCart(cart) {
+        var cartString = "<h5>Your cart</h5>";
+        var cartIndex = 1;
+
+        for (var x in cart) {
+            if (cart.hasOwnProperty(x)) {
+                cartString += cartIndex + ". ";
+
+                var itemElement = document.getElementById("nm" + x);
+
+                if (itemElement) {
+                    cartString += itemElement.innerHTML + " Qty: " + cart[x] + "</br>";
+                } else {
+                    console.error('Element o id "nm' + x + '" nie istnieje w DOM');
+                    cartString += "Unknown Item (id: nm" + x + ") Qty: " + cart[x] + "</br>";
+                }
+
+                cartIndex += 1;
+            }
+        }
+
+        cartString += "<a href=\"/checkout\" class=\"btn btn-warning mt-2\">Checkout</a>\n";
+
+        var cartElement = document.getElementById("cart");
+        if (cartElement) {
+            cartElement.setAttribute('data-content', cartString);
+
+            $(cartElement).popover('dispose');
+            $(cartElement).popover();
+        } else {
+            console.error('Element o id "cart" nie istnieje w DOM');
+        }
+    }
+    </script>
 </body>
 </html>
+
