--- a/ecomsite/perfumeshop/templates/perfumeshop/checkout.html
+++ b/ecomsite/perfumeshop/templates/perfumeshop/checkout.html
@@ -2,13 +2,46 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-
-
     <title>Checkout</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+    <div class="container">
+        <div class="col-md-6">
+            <div class="row">
+                <div class="col-md-12">
+                    <ul class="list-group" id="item_list">
+                        <!-- Tutaj zostanie wygenerowana lista przedmiotów z koszyka -->
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
 
+    <script type="text/javascript">
+        document.addEventListener("DOMContentLoaded", function() {
+            var cartData = JSON.parse(localStorage.getItem('cart'));
+
+            if (cartData) {
+                console.log(cartData);
+                displayCart(cartData);
+            }
+
+            function displayCart(cart) {
+                var itemList = document.getElementById('item_list');
+                itemList.innerHTML = '';
+                console.log(cart);
+
+                for (var item in cart) {
+                    if (cart.hasOwnProperty(item)) {
+                        var itemId = item;
+                        var itemQuantity = cart[item];
+                        var itemString = `<li class="list-group-item">Item ID: ${itemId} - Quantity: ${itemQuantity}</li>`;
+                        itemList.insertAdjacentHTML('beforeend', itemString);
+                    }
+                }
+            }
+        });
+    </script>
 </body>
 </html>
