--- a/ecomsite/perfumeshop/templates/perfumeshop/index.html
+++ b/ecomsite/perfumeshop/templates/perfumeshop/index.html
@@ -184,72 +184,103 @@
 <!--     <script src="{% static 'perfumeshop/custom.js' %}"></script>-->
 
     <script>
-            $(document).ready(function() {
-        var cards = $('#perfume-container .row .card');
-        var maxHeight = Math.max.apply(null, cards.map(function () {
-            return $(this).height();
-        }).get());
-        cards.height(maxHeight);
+        $(document).ready(function() {
+            var cards = $('#perfume-container .row .card');
+            var maxHeight = Math.max.apply(null, cards.map(function () {
+                return $(this).height();
+            }).get());
+            cards.height(maxHeight);
 
-        if (localStorage.getItem('cart') == null) {
-            var cart = {};
-            console.log('ERROR');
-        } else {
-            var cart = JSON.parse(localStorage.getItem('cart'));
-            DisplayCart(cart);
-        }
-
-        $(document).on('click', '.atc', function() {
-            var item_id = this.id.toString();
-            console.log(item_id);
-
-            if (cart[item_id] != undefined) {
-                cart[item_id] += 1;
+            if (localStorage.getItem('cart') == null) {
+                var cart = {};
+                console.log('Cart is empty or not initialized.');
             } else {
-                cart[item_id] = 1;
+                var cart = JSON.parse(localStorage.getItem('cart'));
+                DisplayCart(cart);
             }
-            console.log(cart);
-            localStorage.setItem('cart', JSON.stringify(cart));
-            document.getElementById('cart').innerHTML = "Cart(" + Object.keys(cart).length + ")";
-            DisplayCart(cart);
+
+            $(document).on('click', '.atc', function() {
+                var item_id = this.id.toString();
+                console.log(item_id);
+
+                if (cart[item_id] != undefined) {
+                    cart[item_id] += 1;
+                } else {
+                    cart[item_id] = 1;
+                }
+                console.log(cart);
+                localStorage.setItem('cart', JSON.stringify(cart));
+                document.getElementById('cart').innerHTML = "Cart(" + Object.keys(cart).length + ")";
+                DisplayCart(cart);
+            });
+
+            $('[data-toggle="popover"]').popover();
         });
 
-        $('[data-toggle="popover"]').popover();
+function DisplayCart(cart) {
+    var cartString = "<h5>Your cart</h5>";
+    var cartIndex = 1;
+
+    // Pobierz wszystkie nazwy produktów, które są obecnie wyświetlane na stronie
+    var productNames = {};
+    $('.product-name').each(function() {
+        var id = $(this).attr('id').replace('nm', '');
+        productNames[id] = $(this).text().trim();
     });
 
-    function DisplayCart(cart) {
-        var cartString = "<h5>Your cart</h5>";
-        var cartIndex = 1;
+    for (var x in cart) {
+        if (cart.hasOwnProperty(x)) {
+            cartString += cartIndex + ". ";
 
-        for (var x in cart) {
-            if (cart.hasOwnProperty(x)) {
-                cartString += cartIndex + ". ";
-
-                var itemElement = document.getElementById("nm" + x);
-
-                if (itemElement) {
-                    cartString += itemElement.innerHTML + " Qty: " + cart[x] + "</br>";
-                } else {
-                    console.error('Element o id "nm' + x + '" nie istnieje w DOM');
-                    cartString += "Unknown Item (id: nm" + x + ") Qty: " + cart[x] + "</br>";
-                }
-
-                cartIndex += 1;
+            // Sprawdź, czy nazwa produktu dla danego identyfikatora `x` istnieje w bieżąco wyświetlanych produktach
+            if (productNames[x]) {
+                cartString += productNames[x] + " Qty: " + cart[x] + "</br>";
+            } else {
+                console.error('Element o id "nm' + x + '" nie istnieje w DOM na aktualnej stronie');
+                cartString += "Unknown Item (id: nm" + x + ") Qty: " + cart[x] + "</br>";
             }
-        }
 
-        cartString += "<a href=\"/checkout\" class=\"btn btn-warning mt-2\">Checkout</a>\n";
-
-        var cartElement = document.getElementById("cart");
-        if (cartElement) {
-            cartElement.setAttribute('data-content', cartString);
-
-            $(cartElement).popover('dispose');
-            $(cartElement).popover();
-        } else {
-            console.error('Element o id "cart" nie istnieje w DOM');
+            cartIndex += 1;
         }
     }
+
+    cartString += "<a href=\"/checkout\" class=\"btn btn-warning mt-2\">Checkout</a>\n";
+
+    var cartElement = document.getElementById("cart");
+    if (cartElement) {
+        cartElement.setAttribute('data-content', cartString);
+
+        $(cartElement).popover('dispose');
+        $(cartElement).popover();
+    } else {
+        console.error('Element o id "cart" nie istnieje w DOM');
+    }
+}
+
+// Funkcja do dodawania produktu do koszyka
+$(document).on('click', '.atc', function() {
+    var item_id = this.id.toString();
+    console.log(item_id);
+
+    var cart = JSON.parse(localStorage.getItem('cart')) || {};
+
+    if (cart[item_id]) {
+        cart[item_id] += 1;
+    } else {
+        cart[item_id] = 1;
+    }
+
+    localStorage.setItem('cart', JSON.stringify(cart));
+    document.getElementById('cart').innerHTML = "Cart(" + Object.keys(cart).length + ")";
+});
+
+// Funkcja do wyświetlania koszyka na stronie
+$(document).ready(function() {
+    var cart = JSON.parse(localStorage.getItem('cart')) || {};
+    DisplayCart(cart);
+});
+
     </script>
 </body>
 </html>
+
