--- a/ecomsite/perfumeshop/templates/perfumeshop/index.html
+++ b/ecomsite/perfumeshop/templates/perfumeshop/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perfume Store</title>
-    <link rel="stylesheet" href="{% static 'perfumeshop/style.css' %}">
+
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
@@ -16,49 +16,50 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
 
-    <style>
-        .main-card {
-            margin-top: 20px;
-        }
-        .product-card img {
-            margin-top: 10px;
-            width: 100%;
-            height: 250px;
-            object-fit: contain;
-        }
-        .price-range {
-            margin-top: 10px;
-            display: flex;
-            align-items: center;
-        }
-        .price-range input {
-            margin-top: 10px;
-            width: 80px;
-            margin-right: 5px;
-        }
-        .price-range span {
-            margin: 0 5px;
-        }
-        .custom-container {
-            max-width: 1200px;
-            margin: 0 auto;
-        }
-        .btn {
-            border-radius: 0px;
-            margin: 10px;
-        }
-        .btn_style {
-            padding: 10px;
-            align-items: center;
-            display: flex;
-            justify-content: center;
-        }
-        .pagination {
-            justify-content: center;
-            align-items: center;
-            display: flex;
-        }
-    </style>
+<!--    <style>-->
+<!--        .main-card {-->
+<!--            margin-top: 20px;-->
+<!--        }-->
+<!--        .product-card img {-->
+<!--            margin-top: 10px;-->
+<!--            width: 100%;-->
+<!--            height: 250px;-->
+<!--            object-fit: contain;-->
+<!--        }-->
+<!--        .price-range {-->
+<!--            margin-top: 10px;-->
+<!--            display: flex;-->
+<!--            align-items: center;-->
+<!--        }-->
+<!--        .price-range input {-->
+<!--            margin-top: 10px;-->
+<!--            width: 80px;-->
+<!--            margin-right: 5px;-->
+<!--        }-->
+<!--        .price-range span {-->
+<!--            margin: 0 5px;-->
+<!--        }-->
+<!--        .custom-container {-->
+<!--            max-width: 1200px;-->
+<!--            margin: 0 auto;-->
+<!--        }-->
+<!--        .btn {-->
+<!--            border-radius: 0px;-->
+<!--            margin: 10px;-->
+<!--        }-->
+<!--        .btn_style {-->
+<!--            padding: 10px;-->
+<!--            align-items: center;-->
+<!--            display: flex;-->
+<!--            justify-content: center;-->
+<!--        }-->
+<!--        .pagination {-->
+<!--            justify-content: center;-->
+<!--            align-items: center;-->
+<!--            display: flex;-->
+<!--        }-->
+<!--    </style>-->
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
     <div class="container custom-container">
@@ -183,104 +184,7 @@
 
 <!--     <script src="{% static 'perfumeshop/custom.js' %}"></script>-->
 
-    <script>
-        $(document).ready(function() {
-            var cards = $('#perfume-container .row .card');
-            var maxHeight = Math.max.apply(null, cards.map(function () {
-                return $(this).height();
-            }).get());
-            cards.height(maxHeight);
-
-            if (localStorage.getItem('cart') == null) {
-                var cart = {};
-                console.log('Cart is empty or not initialized.');
-            } else {
-                var cart = JSON.parse(localStorage.getItem('cart'));
-                DisplayCart(cart);
-            }
-
-            $(document).on('click', '.atc', function() {
-                var item_id = this.id.toString();
-                console.log(item_id);
-
-                if (cart[item_id] != undefined) {
-                    cart[item_id] += 1;
-                } else {
-                    cart[item_id] = 1;
-                }
-                console.log(cart);
-                localStorage.setItem('cart', JSON.stringify(cart));
-                document.getElementById('cart').innerHTML = "Cart(" + Object.keys(cart).length + ")";
-                DisplayCart(cart);
-            });
-
-            $('[data-toggle="popover"]').popover();
-        });
-
-function DisplayCart(cart) {
-    var cartString = "<h5>Your cart</h5>";
-    var cartIndex = 1;
-
-    // Pobierz wszystkie nazwy produktów, które są obecnie wyświetlane na stronie
-    var productNames = {};
-    $('.product-name').each(function() {
-        var id = $(this).attr('id').replace('nm', '');
-        productNames[id] = $(this).text().trim();
-    });
-
-    for (var x in cart) {
-        if (cart.hasOwnProperty(x)) {
-            cartString += cartIndex + ". ";
-
-            // Sprawdź, czy nazwa produktu dla danego identyfikatora `x` istnieje w bieżąco wyświetlanych produktach
-            if (productNames[x]) {
-                cartString += productNames[x] + " Qty: " + cart[x] + "</br>";
-            } else {
-                console.error('Element o id "nm' + x + '" nie istnieje w DOM na aktualnej stronie');
-                cartString += "Unknown Item (id: nm" + x + ") Qty: " + cart[x] + "</br>";
-            }
-
-            cartIndex += 1;
-        }
-    }
-
-    cartString += "<a href=\"/checkout\" class=\"btn btn-warning mt-2\">Checkout</a>\n";
-
-    var cartElement = document.getElementById("cart");
-    if (cartElement) {
-        cartElement.setAttribute('data-content', cartString);
-
-        $(cartElement).popover('dispose');
-        $(cartElement).popover();
-    } else {
-        console.error('Element o id "cart" nie istnieje w DOM');
-    }
-}
-
-// Funkcja do dodawania produktu do koszyka
-$(document).on('click', '.atc', function() {
-    var item_id = this.id.toString();
-    console.log(item_id);
-
-    var cart = JSON.parse(localStorage.getItem('cart')) || {};
-
-    if (cart[item_id]) {
-        cart[item_id] += 1;
-    } else {
-        cart[item_id] = 1;
-    }
-
-    localStorage.setItem('cart', JSON.stringify(cart));
-    document.getElementById('cart').innerHTML = "Cart(" + Object.keys(cart).length + ")";
-});
-
-// Funkcja do wyświetlania koszyka na stronie
-$(document).ready(function() {
-    var cart = JSON.parse(localStorage.getItem('cart')) || {};
-    DisplayCart(cart);
-});
-
-    </script>
+    <script src="{% static 'perfumeshop/custom.js' %}"></script>
 </body>
 </html>
 
