--- a/ecomsite/perfumeshop/templates/perfumeshop/index.html
+++ b/ecomsite/perfumeshop/templates/perfumeshop/index.html
@@ -38,7 +38,7 @@
                             <p class="product-price">{{ perfume.price }} zł</p>
                         </div>
                         <div class="btn_style">
-                            <a href="{{ perfume.id }}" class="btn btn-warning">View</a>
+                            <a href="{{ perfume.id }}" class="btn btn-warning button">View</a>
                             <button id="{{ perfume.id }}" class="btn atc btn-warning button">Add to cart</button>
                         </div>
                     </div>
