--- a/ecomsite/perfumeshop/templates/perfumeshop/main.html
+++ b/ecomsite/perfumeshop/templates/perfumeshop/main.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Perfumeshop</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
     {% block extra_css %}
     {% endblock %}
@@ -13,26 +14,29 @@
     <div class="container custom-container">
         <div class="row">
             <div class="col-md-12">
-                <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-custom">
+                <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-custom" id="#nav">
                     <a class="navbar-brand" href="{% url 'index' %}">Perfumeshop</a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                        <div class="navbar-nav">
-                            <a class="nav-item nav-link active" href="{% url 'index' %}">Home<span class="sr-only">(current)</span></a>
-                        </div>
+                    <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
+                        <form class="card card-sm search-form" method="get" id="search-form">
+                            <div class="input-group">
+                                <input type="search" name="item_name" placeholder="Search for products" class="form-control form-control-borderless search-input" value="{{ request.GET.item_name }}">
+                                <div class="input-group-append">
+                                    <button type="submit" class="btn btn-success">
+                                        <i class="fas fa-search"></i>
+                                    </button>
+                                </div>
+                            </div>
+                        </form>
+
+                         <a class="nav-link">
+                            <i class="fas fa-user"></i>
+                        </a>
+
+                         <a class="nav-link" href="{% url 'cart' %}">
+                            <i class="fas fa-shopping-cart"></i>
+                        </a>
+
                     </div>
-                    <form class="card card-sm search-form" method="get" id="search-form">
-                        <div class="card-body row no-gutters align-items-center">
-                            <div class="col">
-                                <input type="search" name="item_name" placeholder="Search for products" class="form-control form-control-borderless" value="{{ request.GET.item_name }}">
-                            </div>
-                            <div class="col-auto">
-                                <button class="btn btn-success" type="submit">Search</button>
-                            </div>
-                        </div>
-                    </form>
                 </nav>
             </div>
         </div>
