--- a/ecomsite/perfumeshop/static/css/cart.css
+++ b/ecomsite/perfumeshop/static/css/cart.css
@@ -13,3 +13,31 @@
 .btn{
 	border-radius: 0;
 }
+
+
+.quantity{
+	display: inline-block;
+	font-weight: 700;
+	padding-right:10px;
+
+}
+
+.chg-quantity{
+	width: 12px;
+	cursor: pointer;
+	display: block;
+	margin-top: -8px;
+	transition:.1s;
+    font-size: 18px;
+}
+
+.chg-quantity:hover{
+	opacity: .6;
+}
+
+.product-image {
+    width: 100%;
+    height: 100px;
+    object-fit: contain;
+	margin-left: -25px;
+}
