--- a/ecomsite/perfumeshop/static/css/checkout.css
+++ b/ecomsite/perfumeshop/static/css/checkout.css
@@ -17,16 +17,6 @@
 	margin-left: 15px;
 }
 
-#cart-total{
-	display: block;
-	text-align: center;
-	color:#fff;
-	background-color: red;
-	width: 20px;
-	height: 25px;
-	border-radius: 50%;
-	font-size: 14px;
-}
 
 .col-lg-6{
 	margin-top: 10px;
@@ -55,4 +45,31 @@
 
 .hidden{
 	display: none!important;
+}
+
+.quantity{
+	display: inline-block;
+	font-weight: 700;
+	padding-right:10px;
+
+}
+
+.chg-quantity{
+	width: 12px;
+	cursor: pointer;
+	display: block;
+	margin-top: -8px;
+	transition:.1s;
+    font-size: 18px;
+}
+
+.chg-quantity:hover{
+	opacity: .6;
+}
+
+.product-image {
+    width: 100%;
+    height: 100px;
+    object-fit: contain;
+	margin-left: -25px;
 }
