--- a/ecomsite/perfumeshop/templates/perfumeshop/checkout.html
+++ b/ecomsite/perfumeshop/templates/perfumeshop/checkout.html
@@ -58,14 +58,16 @@
 				<hr>
 				<h3>Order Summary</h3>
 				<hr>
+                {% for item in items %}
 				<div class="cart-row">
-					<div style="flex:2"></div>
-					<div style="flex:2"><p>Product 1</p></div>
-					<div style="flex:1"><p>$20.00</p></div>
-					<div style="flex:1"><p>x2</p></div>
+					<div style="flex:2"><img class="product-image" src="{{item.product.image}}" alt=""></div>
+					<div style="flex:2"><p>{{item.product.brand}} - {{item.product.name}}</p></div>
+					<div style="flex:1"><p>${{item.product.price|floatformat:2}}</p></div>
+					<div style="flex:1"><p class="quantity">x{{item.quantity}}</p></div>
 				</div>
-				<h5>Items:   2</h5>
-				<h5>Total:   $4</h5>
+                {% endfor %}
+				<h5>{{ order.get_cart_items }}</h5>
+				<h5>${{ order.get_cart_total|floatformat:2 }}</h5>
 			</div>
 		</div>
 	</div>
