--- a/ecomsite/perfumeshop/static/css/main.css
+++ b/ecomsite/perfumeshop/static/css/main.css
@@ -45,3 +45,27 @@
 .btn{
 	border-radius: 0;
 }
+
+#cart-total{
+	display: block;
+	text-align: center;
+	color:#fff;
+	background-color: red;
+	width: 20px;
+	height: 25px;
+	border-radius: 50%;
+	font-size: 14px;
+    margin-left: -21px;
+}
+
+#cart-icon{
+	width:25px;
+	display: inline-block;
+    margin-left: 10px;
+}
+
+.links {
+    display: flex;
+
+}
+
