--- a/ecomsite/perfumeshop/templates/perfumeshop/main.html
+++ b/ecomsite/perfumeshop/templates/perfumeshop/main.html
@@ -7,6 +7,27 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
+
+    <script type="text/javascript">
+        let user = '{{request.user}}'
+
+		function getToken(name) {
+        let cookieValue = null;
+        if (document.cookie && document.cookie !== '') {
+            const cookies = document.cookie.split(';');
+            for (let i = 0; i < cookies.length; i++) {
+                const cookie = cookies[i].trim();
+                // Does this cookie string begin with the name we want?
+                if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                    cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                    break;
+                }
+            }
+        }
+        return cookieValue;
+    }
+    const csrftoken = getToken('csrftoken');
+    </script>
     {% block extra_css %}
     {% endblock %}
 </head>
@@ -29,14 +50,18 @@
                             </div>
                         </form>
 
-                         <a class="nav-link">
-                            <i class="fas fa-user"></i>
-                        </a>
+                        <div class="links">
+                             <a class="nav-link">
+                                <i class="fas fa-user"></i>
+                            </a>
+                             <a class="nav-link" href="{% url 'cart' %}">
+                                <i id="cart-icon" class="fas fa-shopping-cart">
 
-                         <a class="nav-link" href="{% url 'cart' %}">
-                            <i class="fas fa-shopping-cart"></i>
-                        </a>
+                                </i>
 
+                            </a>
+                            <p id="cart-total">{{ cartItems }}</p>
+                        </div>
                     </div>
                 </nav>
             </div>
