--- a/ecomsite/perfumeshop/templates/perfumeshop/main.html
+++ b/ecomsite/perfumeshop/templates/perfumeshop/main.html
@@ -33,7 +33,7 @@
 </head>
 <body>
 
-    <div class="container custom-container">
+{#    <div class="container custom-container">#}
         <div class="row">
             <div class="col-md-12">
                 <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-custom" id="#nav">
@@ -66,7 +66,7 @@
                 </nav>
             </div>
         </div>
-    </div>
+{#    </div>#}
 
     <div class="container">
         {% block content %}
